Fixed second overlay being too small, adjusted height container

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -167,7 +167,8 @@ html {
   @media (max-width: 56.25em) {
     .container {
       flex-direction: column;
-      border-radius: 0; } }
+      border-radius: 0;
+      height: 140vh; } }
   @media (max-width: 37.5em) {
     .container {
       clip-path: polygon(0 0, 100% 0, 100% 93%, 0% 100%); } }
@@ -241,7 +242,7 @@ html {
       .container__half--2 {
         border-radius: 0;
         width: 100%;
-        height: 120%; } }
+        height: 100%; } }
 
 .header {
   position: absolute;
